--- a/index.html
+++ b/index.html
@@ -680,7 +680,7 @@
     <footer>
         <p>Copyright © Your Name</p>
     </footer>
-    <script src="scripts.js"></script>
-    <script src="filterImages.js"></script>
+    <script src="js/scripts.js"></script>
+    <script src="js/filterImages.js"></script>
 </body>
 </html>
