--- a/index.html
+++ b/index.html
@@ -681,6 +681,6 @@
         <p>Copyright © Your Name</p>
     </footer>
     <script src="js/scripts.js"></script>
-    <script src="js/filterImages.js"></script>
+    <script src="js/filterimages.js"></script>
 </body>
 </html>
