--- a/index.html
+++ b/index.html
@@ -51,157 +51,157 @@
                     </div>
                 </div>
                 <div class="image-item">
-                    <img src=https://github.com/Zer0Learn/bearmarketbeasts/blob/main/images/bodies/Bull.png?raw=true alt="Bull" loading="lazy">
+                    <img src="https://github.com/Zer0Learn/bearmarketbeasts/blob/main/images/bodies/Bull.png?raw=true" alt="Bull" loading="lazy">
                     <div class="description">
                         <p>In the financial markets, the bull is a totem of prosperity, its horns piercing the uncertainty to herald a time of abundance and wealth. It embodies the unyielding vigor of the investor, charging with a blind ferocity that leaves the rest of the world questioning their sanity.</p>
                     </div>
                 </div>
                 <div class="image-item">
-                    <img src=https://github.com/Zer0Learn/bearmarketbeasts/blob/main/images/bodies/Coyote.png?raw=true alt="Coyote" loading="lazy">
+                    <img src="https://github.com/Zer0Learn/bearmarketbeasts/blob/main/images/bodies/Coyote.png?raw=true" alt="Coyote" loading="lazy">
                     <div class="description">
                         <p>When I was younger I could hear coyotes howling, yipping, and screaming at each other behind my house. Some nights they'd work themselves into a frenzy and suddenly it would get quite again - whatever rodent or deer they hunted bleating for its last few breaths</p>
                     </div>
                 </div>
                 <div class="image-item">
-                    <img src=https://github.com/Zer0Learn/bearmarketbeasts/blob/main/images/bodies/Ferret.png?raw=true alt="Ferret" loading="lazy">
+                    <img src="https://github.com/Zer0Learn/bearmarketbeasts/blob/main/images/bodies/Ferret.png?raw=true" alt="Ferret" loading="lazy">
                     <div class="description">
                         <p>If you've never had the displeasure of smelling the inside of a house where ferrets live I'd suggest you keep it that way. They're cute as hell and fun to play with, but so are dogs and they don't smell half as bad</p>
                     </div>
                 </div>
                 <div class="image-item">
-                    <img src=https://github.com/Zer0Learn/bearmarketbeasts/blob/main/images/bodies/FieldMouse.png?raw=true alt="Field Mouse">
+                    <img src="https://github.com/Zer0Learn/bearmarketbeasts/blob/main/images/bodies/FieldMouse.png?raw=true" alt="Field Mouse">
                     <div class="description">
                         <p>Mice were the genesis of this collection. Someone in our discord use Dalle to create a "pixelated mouse wearing a hoodie" and it was the first time I'd seen Dalle output actual pixel art rather than blocky approximations, so I wanted to see what I could do with it.</p>
                     </div>
                 </div>
                 <div class="image-item">
-                    <img src=https://github.com/Zer0Learn/bearmarketbeasts/blob/main/images/bodies/Fox.png?raw=true alt="Fox" loading="lazy">
+                    <img src="https://github.com/Zer0Learn/bearmarketbeasts/blob/main/images/bodies/Fox.png?raw=true" alt="Fox" loading="lazy">
                     <div class="description">
                         <p>There are a lot of ways to be "like a fox". You can be like a fox on the run, clever as a fox, sly as a fox, crazy as a fox. None of them sound like very positive things to be like, but that shouldn't take away from the fact that foxes are rad as hell.  </p>
                     </div>
                 </div>
                 <div class="image-item">
-                    <img src=https://github.com/Zer0Learn/bearmarketbeasts/blob/main/images/bodies/Frog.png?raw=true alt="Frog" loading="lazy">
+                    <img src="https://github.com/Zer0Learn/bearmarketbeasts/blob/main/images/bodies/Frog.png?raw=true" alt="Frog" loading="lazy">
                     <div class="description">
                         <p>First the alt-right had him, then he became the darling of crypto twitter (which is also alt-right if you read WAPO). No animal brings joy to the heart like Pepe the frog. And no collection of animal spirits would be complete without him.</p>
                     </div>
                 </div>
                 <div class="image-item">
-                    <img src=https://github.com/Zer0Learn/bearmarketbeasts/blob/main/images/bodies/Goat.png?raw=true alt="Goat" loading="lazy">
+                    <img src="https://github.com/Zer0Learn/bearmarketbeasts/blob/main/images/bodies/Goat.png?raw=true" alt="Goat" loading="lazy">
                     <div class="description">
                         <p>Greatest of all time. I'm the G.O.A.T. You're the GOAT. We're all GOATs when we're describing ourselves. Little hype beasts cheering ourselves on to do more, to make more money, to break away from the 9-5 while we gamble away our last few pennies.</p>
                     </div>
                 </div>
                 <div class="image-item">
-                    <img src=https://github.com/Zer0Learn/bearmarketbeasts/blob/main/images/bodies/Husky.png?raw=true alt="Husky" loading="lazy">
+                    <img src="https://github.com/Zer0Learn/bearmarketbeasts/blob/main/images/bodies/Husky.png?raw=true" alt="Husky" loading="lazy">
                     <div class="description">
                         <p>Look, is this technically just a variation of a wolf? Maybe, but I did make some slight technical changes for the pixels and thats has a real effect if you put them side by side.</p>
                     </div>
                 </div>
                 <div class="image-item">
-                    <img src=https://github.com/Zer0Learn/bearmarketbeasts/blob/main/images/bodies/Koala.png?raw=true alt="Koala" loading="lazy">
+                    <img src="https://github.com/Zer0Learn/bearmarketbeasts/blob/main/images/bodies/Koala.png?raw=true" alt="Koala" loading="lazy">
                     <div class="description">
                         <p>Fun fact: a lot of Koalas have chlamydia. Sounds like my ex-wife.</p>
                     </div>
                 </div>
                 <div class="image-item">
-                    <img src=https://github.com/Zer0Learn/bearmarketbeasts/blob/main/images/bodies/Mouse.png?raw=true alt="Mouse" loading="lazy">
+                    <img src="https://github.com/Zer0Learn/bearmarketbeasts/blob/main/images/bodies/Mouse.png?raw=true" alt="Mouse" loading="lazy">
                     <div class="description">
                         <p>Anonymice doesn't get the credit it deserves. If people hadn't been so fanatical about the "ponzi" and just appreciated it for what it was, a novel piece of on-chain art, all of society would be better off for it.</p>
                     </div>
                 </div>
                 <div class="image-item">
-                    <img src=https://github.com/Zer0Learn/bearmarketbeasts/blob/main/images/bodies/OhWaWa.png?raw=true alt="Oh Wa Wa" loading="lazy">
+                    <img src="https://github.com/Zer0Learn/bearmarketbeasts/blob/main/images/bodies/OhWaWa.png?raw=true" alt="Oh Wa Wa" loading="lazy">
                     <div class="description">
                         <p>I made this one up, but I also think I based it off the vague memory of an animal that exists. If you know what it is please DM me. </p>
                     </div>
                 </div>
                 <div class="image-item">
-                    <img src=https://github.com/Zer0Learn/bearmarketbeasts/blob/main/images/bodies/Panda.png?raw=true alt="Panda" loading="lazy">
+                    <img src="https://github.com/Zer0Learn/bearmarketbeasts/blob/main/images/bodies/Panda.png?raw=true" alt="Panda" loading="lazy">
                     <div class="description">
                         <p>See also, "Bear".</p>
                     </div>
                 </div>
                 <div class="image-item">
-                    <img src=https://github.com/Zer0Learn/bearmarketbeasts/blob/main/images/bodies/Penguin.png?raw=true alt="Penguin" loading="lazy">
+                    <img src="https://github.com/Zer0Learn/bearmarketbeasts/blob/main/images/bodies/Penguin.png?raw=true" alt="Penguin" loading="lazy">
                     <div class="description">
                         <p>Pudgy Penguins, god damn, what a come back story. OGs know how bad all of that was and a lot of OGs made a huge amount on their come back story. There's little doubt in my mind that in the future when normal people think of idiots buying jpegs for thousands of dollars, they'll think "Pudgy Penguins."</p>
                     </div>
                 </div>
                 <div class="image-item">
-                    <img src=https://github.com/Zer0Learn/bearmarketbeasts/blob/main/images/bodies/PolarBear.png?raw=true alt="Polar Bear" loading="lazy">
+                    <img src="https://github.com/Zer0Learn/bearmarketbeasts/blob/main/images/bodies/PolarBear.png?raw=true" alt="Polar Bear" loading="lazy">
                     <div class="description">
                         <p>See also, "Panda".</p>
                     </div>
                 </div>
                 <div class="image-item">
-                    <img src=https://github.com/Zer0Learn/bearmarketbeasts/blob/main/images/bodies/Pug.png?raw=true alt="Pug" loading="lazy">
+                    <img src="https://github.com/Zer0Learn/bearmarketbeasts/blob/main/images/bodies/Pug.png?raw=true" alt="Pug" loading="lazy">
                     <div class="description">
                         <p>There's a group of dog breeders trying to make pugs look like normal dogs and fix their breathing problems. They're hideous little things. God speed to the breeders. </p>
                     </div>
                 </div>
                 <div class="image-item">
-                    <img src=https://github.com/Zer0Learn/bearmarketbeasts/blob/main/images/bodies/Rabbit.png?raw=true alt="Rabbit" loading="lazy">
+                    <img src="https://github.com/Zer0Learn/bearmarketbeasts/blob/main/images/bodies/Rabbit.png?raw=true" alt="Rabbit" loading="lazy">
                     <div class="description">
                         <p>Greatest of all time. I'm the G.O.A.T. You're the GOAT. We're all GOATs when we're describing ourselves. Little hype beasts cheering ourselves on to do more, to make more money, to break away from the 9-5 while we gamble away our last few pennies.</p>
                     </div>
                 </div>
                 <div class="image-item">
-                    <img src=https://github.com/Zer0Learn/bearmarketbeasts/blob/main/images/bodies/Raccoon.png?raw=true alt="Raccoon" loading="lazy">
+                    <img src="https://github.com/Zer0Learn/bearmarketbeasts/blob/main/images/bodies/Raccoon.png?raw=true" alt="Raccoon" loading="lazy">
                     <div class="description">
                         <p>Trash pandas, with their cute little paws. We need a raccoon collection.</p>
                     </div>
                 </div>
                 <div class="image-item">
-                    <img src=https://github.com/Zer0Learn/bearmarketbeasts/blob/main/images/bodies/Rat.png?raw=truee alt="Rat" loading="lazy">
+                    <img src="https://github.com/Zer0Learn/bearmarketbeasts/blob/main/images/bodies/Rat.png?raw=true" alt="Rat" loading="lazy">
                     <div class="description">
                         <p>Change da world. My final message. Goodbye.</p>
                     </div>
                 </div>
                 <div class="image-item">
-                    <img src=https://github.com/Zer0Learn/bearmarketbeasts/blob/main/images/bodies/RedPanda.png?raw=true alt="Red Panda" loading="lazy">
+                    <img src="https://github.com/Zer0Learn/bearmarketbeasts/blob/main/images/bodies/RedPanda.png?raw=true" alt="Red Panda" loading="lazy">
                     <div class="description">
                         <p>I saw these at a zoo in San Francisco once and they  </p>
                     </div>
                 </div>
                 <div class="image-item">
-                    <img src=https://github.com/Zer0Learn/bearmarketbeasts/blob/main/images/bodies/Rooster.png?raw=true alt="Rooster" loading="lazy">
+                    <img src="https://github.com/Zer0Learn/bearmarketbeasts/blob/main/images/bodies/Rooster.png?raw=true" alt="Rooster" loading="lazy">
                     <div class="description">
                         <p>Something funny about cocks</p>
                     </div>
                 </div>
                 <div class="image-item">
-                    <img src=https://github.com/Zer0Learn/bearmarketbeasts/blob/main/images/bodies/ShibaInu.png?raw=true alt="Shiba Inu" loading="lazy">
+                    <img src=https://github.com/Zer0Learn/bearmarketbeasts/blob/main/images/bodies/ShibaInu.png?raw=true" alt="Shiba Inu" loading="lazy">
                     <div class="description">
                         <p>The most iconic dog in all of crypto. Everyone and their mother has owned a bit of $DOGE at one point or another. Every animal collection should have an omage toward the shiba inu</p>
                     </div>
                 </div>
                 <div class="image-item">
-                    <img src=https://github.com/Zer0Learn/bearmarketbeasts/blob/main/images/bodies/Sloth.png?raw=true alt="Sloth" loading="lazy">
+                    <img src="https://github.com/Zer0Learn/bearmarketbeasts/blob/main/images/bodies/Sloth.png?raw=true" alt="Sloth" loading="lazy">
                     <div class="description">
                         <p>Women loves sloths. I've never met a woman who doesn't like sloths. Its as universal as them wanting to be chocked.</p>
                     </div>
                 </div>
                 <div class="image-item">
-                    <img src=https://github.com/Zer0Learn/bearmarketbeasts/blob/main/images/bodies/Squirrel.png?raw=true alt="Squirrel" loading="lazy">
+                    <img src="https://github.com/Zer0Learn/bearmarketbeasts/blob/main/images/bodies/Squirrel.png?raw=true" alt="Squirrel" loading="lazy">
                     <div class="description">
                         <p>Do you have black squirrels, brown squirrels, or ground squirrels where you live? </p>
                     </div>
                 </div>
                 <div class="image-item">
-                    <img src=https://github.com/Zer0Learn/bearmarketbeasts/blob/main/images/bodies/Stoat.png?raw=true alt="Stoat" loading="lazy">
+                    <img src="https://github.com/Zer0Learn/bearmarketbeasts/blob/main/images/bodies/Stoat.png?raw=true" alt="Stoat" loading="lazy">
                     <div class="description">
                         <p>There's a wonderful deck-building rogue-lite called Inscryption where the first friendly character you interact with is a stoat. If you like deck-building and mystery you'll love Inscryption</p>
                     </div>
                 </div>
                 <div class="image-item">
-                    <img src=https://github.com/Zer0Learn/bearmarketbeasts/blob/main/images/bodies/WildCat.png?raw=true alt="Wild Cat" loading="lazy">
+                    <img src="https://github.com/Zer0Learn/bearmarketbeasts/blob/main/images/bodies/WildCat.png?raw=true" alt="Wild Cat" loading="lazy">
                     <div class="description">
                         <p>My high school mascot. Just the most pathetic choice for a mascot.</p>
                     </div>
                 </div>
                 <div class="image-item">
-                    <img src=https://github.com/Zer0Learn/bearmarketbeasts/blob/main/images/bodies/Wolf.png?raw=true alt="Wolf" loading="lazy">
+                    <img src="https://github.com/Zer0Learn/bearmarketbeasts/blob/main/images/bodies/Wolf.png?raw=true" alt="Wolf" loading="lazy">
                     <div class="description">
                         <p>HSAKA!</p>
                     </div>
