--- a/index.html
+++ b/index.html
@@ -635,7 +635,7 @@
                 <div class="image-item">
                     <img src="https://github.com/Zer0Learn/bearmarketbeasts/blob/main/images/clothes/Royalty.png?raw=true" alt="Royalty" loading="lazy"
                     <div class="description">
-                        <p> </p>
+                        <p>The lap of luxury</p>
                     </div>
                 </div>
                 <div class="image-item">
