--- a/index.html
+++ b/index.html
@@ -633,7 +633,7 @@
                     </div>
                 </div>
                 <div class="image-item">
-                    <img src="https://github.com/Zer0Learn/bearmarketbeasts/blob/main/images/clothes/Royalty.png?raw=true" alt="Royalty" loading="lazy"
+                    <img src="https://github.com/Zer0Learn/bearmarketbeasts/blob/main/images/clothes/Royalty.png?raw=true" alt="Royalty" loading="lazy">
                     <div class="description">
                         <p>The lap of luxury</p>
                     </div>
