--- a/index.html
+++ b/index.html
@@ -638,6 +638,30 @@
                         <p>The lap of luxury</p>
                     </div>
                 </div>
+                <div class="image-item">
+                    <img src="https://github.com/Zer0Learn/bearmarketbeasts/blob/main/images/clothes/sweaters.gif?raw=true" alt="Sweaters" loading="lazy">
+                    <div class="description">
+                        <p>run</p>
+                    </div>
+                </div>
+                <div class="image-item">
+                    <img src="https://github.com/Zer0Learn/bearmarketbeasts/blob/main/images/clothes/tanktops.gif?raw=true" alt="Tank Top" loading="lazy">
+                    <div class="description">
+                        <p>run</p>
+                    </div>
+                </div>
+                <div class="image-item">
+                    <img src="https://github.com/Zer0Learn/bearmarketbeasts/blob/main/images/clothes/suit.gif?raw=true" alt="Suits" loading="lazy">
+                    <div class="description">
+                        <p>One of these suits is based on the outfit of famous thief, Lupin. The others are not. </p>
+                    </div>
+                </div>
+                <div class="image-item">
+                    <img src="https://github.com/Zer0Learn/bearmarketbeasts/blob/main/images/clothes/zipups.gif?raw=true" alt="Zip-ups" loading="lazy">
+                    <div class="description">
+                        <p> you need to understand the following: I am better than you I am smarter than you I am more attractive than you I am happier than you I am stronger than you I am faster than you I am more violent than you I am more successful than you I am more fulfilled than you </p>
+                    </div>
+                </div>
             </div>
         </div>
         <section>
