--- a/index.html
+++ b/index.html
@@ -534,13 +534,13 @@
                 <div class="image-item">
                     <img src="https://github.com/Zer0Learn/bearmarketbeasts/blob/main/images/Cryptwits/Don%20Alt.png?raw=true" alt="Don Alt" loading="lazy">
                     <div class="description">
-                        <p>Legend tells that on rare, hushed evenings, the Frogman emerges from his aquatic lair, perhaps once a prince or a guardian of ancient, sunken treasures, now bound to the riverbanks of Loveland. Some say it wields a wand-like object, casting an eerie light and bewitching the air with strange sparks as it lopes through the fog.</p>
+                        <p>Vaxxed Matrix Agent | Smug prick</p>
                     </div>
                 </div>
                 <div class="image-item">
                     <img src="https://github.com/Zer0Learn/bearmarketbeasts/blob/main/images/Cryptwits/Droober.png?raw=true" alt="Droober" loading="lazy">
                     <div class="description">
-                        <p>The Howler, as the name suggests, is notorious for its spine-chilling cry—a sound that combines the howl of a wolf, the wail of a human in distress, and the growl of a rabid dog. This eerie call is said to echo through the Ozarks on moonless nights, a harbinger of misfortune or a call to heed the wild's untamed nature.</p>
+                        <p> Droober, often visualized as a swirling mass of colors and shapes, constantly changing and reforming, is revered as the patron saint of artists, a guardian spirit of all who wield the brush, the pen, or the pixel. This being is imbued with an understanding of art in all its forms, extending its ethereal hand to guide and inspire creators in their moments of doubt and creative block.</p>
                     </div>
                 </div>
                 <div class="image-item">
@@ -570,31 +570,31 @@
                 <div class="image-item">
                     <img src="https://github.com/Zer0Learn/bearmarketbeasts/blob/main/images/Cryptwits/Rektdiomedes.png?raw=true" alt="Rektdiomedes" loading="lazy">
                     <div class="description">
-                        <p>Amaterasu is often depicted as a radiant and benevolent being, whose beauty and warmth are unrivaled. She is the bringer of light, banishing darkness and nurturing life with her gentle, life-giving rays. Her presence is synonymous with the vitality and sustenance that the sun provides, making her a deity of agriculture and fertility as well.</p>
+                        <p>Rektdiomedes, whose name echoes that of the Greek heroes of old, wanders the bustling streets of the digital age, a scholar with the heart of a gambler. Clad in a cloak that seems woven from threads of binary code and ancient manuscripts, Rektdiomedes is both a thinker and a doer, his eyes alight with the thrill of the gamble and the pursuit of knowledge.</p>
                     </div>
                 </div>
                 <div class="image-item">
                     <img src="https://github.com/Zer0Learn/bearmarketbeasts/blob/main/images/Cryptwits/Rhino.png?raw=true" alt="Rhino" loading="lazy">
                     <div class="description">
-                        <p>The most famous depiction of the Piasa is a massive pictograph that once existed on the cliffs of the Mississippi River. This ancient mural, first recorded by French explorers in the 17th century, portrayed the Piasa with a man-eating appetite, instilling dread in all who navigated the river's winding path.</p>
+                        <p></p>
                     </div>
                 </div>
                 <div class="image-item">
                     <img src="https://github.com/Zer0Learn/bearmarketbeasts/blob/main/images/Cryptwits/Tervo.png?raw=true" alt="Tervo" loading="lazy">
                     <div class="description">
-                        <p>This creature is not merely a beast, but a guardian of the wilderness, a symbol of the untamed world. The Snawfus' antlers are told to carry with them the buds of spring and the blooms of summer, and as it walks, it spreads the life of the forest, coaxing greenery and flowers to spring forth from the earth with each step. Wherever the Snawfus treads, growth and vitality are said to follow, a walking emblem of the earth's boundless creativity.</p>
+                        <p>The Tervo is a vibrant creature of modern folklore, born from the buzz of Monster Energy drinks and the sun-soaked thrill of the chase for success. It basks gleefully in endless sunlight, its scales shimmering with the promise of dawn. The Tervo is the epitome of "perma bullish" optimism, a financial phoenix steadfast in the belief that with every market dip comes the inevitable upswing—"making it all back" is its credo. Seen as the maverick spirit of the urban jungle, the Tervo embodies the relentless pursuit of high stakes and the electric rush of a comeback, forever sipping from its can of Monster as it rides the waves of fortune under the ever-watchful sun.</p>
                     </div>
                 </div>
                 <div class="image-item">
                     <img src="https://github.com/Zer0Learn/bearmarketbeasts/blob/main/images/Cryptwits/GayBear.png?raw=true" alt="The Bear" loading="lazy">
                     <div class="description">
-                        <p>This creature is not merely a beast, but a guardian of the wilderness, a symbol of the untamed world. The Snawfus' antlers are told to carry with them the buds of spring and the blooms of summer, and as it walks, it spreads the life of the forest, coaxing greenery and flowers to spring forth from the earth with each step. Wherever the Snawfus treads, growth and vitality are said to follow, a walking emblem of the earth's boundless creativity.</p>
+                        <p>These beasts are tolerated only because they allow markets to thrive.</p>
                     </div>
                 </div>
                 <div class="image-item">
                     <img src="https://github.com/Zer0Learn/bearmarketbeasts/blob/main/images/Cryptwits/The%20Bull.png?raw=true" alt="The Bull" loading="lazy">
                     <div class="description">
-                        <p>Amaterasu is often depicted as a radiant and benevolent being, whose beauty and warmth are unrivaled. She is the bringer of light, banishing darkness and nurturing life with her gentle, life-giving rays. Her presence is synonymous with the vitality and sustenance that the sun provides, making her a deity of agriculture and fertility as well.</p>
+                        <p>Unyielding, relentless, bullishness. The number can go up. The number will go up.</p>
                     </div>
                 </div>
                 <div class="image-item">
