--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 <div class="image-item">
                     <img src="https://github.com/Zer0Learn/bearmarketbeasts/blob/main/images/bodies/Rabbit.png?raw=true" alt="Rabbit" loading="lazy">
                     <div class="description">
-                        <p>Greatest of all time. I'm the G.O.A.T. You're the GOAT. We're all GOATs when we're describing ourselves. Little hype beasts cheering ourselves on to do more, to make more money, to break away from the 9-5 while we gamble away our last few pennies.</p>
+                        <p>Some pun about rabbits goes here.</p>
                     </div>
                 </div>
                 <div class="image-item">
@@ -161,7 +161,7 @@
                 <div class="image-item">
                     <img src="https://github.com/Zer0Learn/bearmarketbeasts/blob/main/images/bodies/RedPanda.png?raw=true" alt="Red Panda" loading="lazy">
                     <div class="description">
-                        <p>I saw these at a zoo in San Francisco once and they  </p>
+                        <p>I saw these at a zoo in San Francisco once and they didn't move. I was so disappointed. </p>
                     </div>
                 </div>
                 <div class="image-item">
