--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <nav>
         <!-- Navigation links go here -->
     </nav>
+    <section>
+            <h2>The Credo</h2>
+            <p>Your biggest risk is being underallocated to the industry you log into single every damn day to talk about since you know it’s gonna go up eventually but not having enough coins because you’re a lil bitch</p>
+        </section>
     <main>
         <button onclick="filterImages('all')">All</button>
         <button onclick="filterImages('animals')">Animals</button>
@@ -665,18 +669,6 @@
                 
             </div>
         </div>
-        <section>
-            <h2>About Me</h2>
-            <p>This section contains information about you or your website.</p>
-        </section>
-        <section>
-            <h2>My Work</h2>
-            <!-- Content about your work goes here -->
-        </section>
-        <section>
-            <h2>Contact</h2>
-            <!-- Contact information or form goes here -->
-        </section>
     </main>
     <footer>
         <p>Copyright © Your Name</p>
